<resources>
    <string name="app_name">海豚优宠</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>

    <!--Title Text-->
    <string name="title_shop">宠物超市</string>
    <string name="title_get_captcha">获取验证码</string>
    <string name="title_recycle">垃圾回收</string>
    <string name="title_register">注册</string>
    <string name="title_login">登录</string>
    <string name="title_release">发布信息</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_order_submit">提交订单</string>
    <string name="title_order">我的订单</string>
    <string name="title_coupon">优惠券</string>
    <string name="title_receiver">收货地址</string>
    <string name="title_receiver_add">添加收货地址</string>
    <string name="title_receiver_update">更新收货地址</string>
    <string name="title_home_service">家政服务</string>
    <string name="title_my_order">我的订单</string>


    <string name="dialog_title_memo">订单附言</string>
    <string name="dialog_title_invoice">发票抬头</string>

    <string name="action_add">添加</string>
    <string name="action_release">发布</string>
    <string name="action_clear">清空</string>

    <string name="plugin_title_alipay">支付宝转账</string>

    <!--Button Text-->
    <string name="btn_login">登录</string>
    <string name="btn_login_out">未登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_send_captcha">发送验证码</string>
    <string name="btn_count_down">秒</string>
    <string name="btn_resend">重新发送</string>
    <string name="btn_next_step">下一步</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_add_shopping_cart">加入购物车</string>
    <string name="btn_pay">去结算</string>
    <string name="btn_order_submit">提交订单</string>
    <string name="btn_plus">+</string>
    <string name="btn_reduce">—</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_delete">删除</string>

    <!--Hint_Text-->
    <string name="hint_mobile_number">手机号码</string>
    <string name="hint_mobile_captcha">短信验证码</string>
    <string name="hint_login_password">登录密码</string>
    <string name="hint_password_old">旧密码</string>
    <string name="hint_password_new">新密码</string>
    <string name="hint_password_confirm">确认密码</string>
    <string name="hint_username">用户名</string>
    <string name="hint_account">用户名/手机号码</string>
    <string name="hint_invitation_code">邀请码（选填、区分大小写）</string>
    <string name="hint_say_something">说点什么&#8230;</string>
    <string name="hint_invoice">请输入发票抬头&#8230;</string>
    <string name="hint_order_memo">订单补充说明&#8230;</string>
    <string name="hint_receiver_name">请输入收货人姓名</string>
    <string name="hint_receiver_phone">请输入手机号码</string>
    <string name="hint_receiver_area">请选择所在地区</string>
    <string name="hint_receiver_address">请输入详细地址</string>
    <string name="hint_receiver_postal_code">请输入邮政编码</string>

    <!--错误提示-->
    <string name="error_account_null">账号不能为空</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_password_old_null">旧密码不能为空</string>
    <string name="error_password_new_null">密码不能为空</string>
    <string name="error_captcha_null">验证码不能为空</string>
    <string name="error_captcha">验证码不正确</string>
    <string name="error_password_confirm_null">确认密码不能为空</string>
    <string name="error_mobile_null">手机号码不能为空</string>
    <string name="error_mobile_regex">手机号码格式不正确</string>
    <string name="error_password_not_equals">两次输入的密码不一致</string>
    <string name="error_nickname_null">昵称不能为空</string>
    <string name="error_nickname">格式错误（昵称为3至16位中英文和“_”组成，不能以“_”结尾）</string>
    <string name="error_content_null">您还没有说点什么哦！</string>
    <string name="error_image_null">您还没有选择图片哦！</string>
    <string name="error_shopping_cart_null">您购物车已经是空的哦！</string>
    <string name="error_receiver_null">收货地址不能为空！</string>
    <string name="error_invoice_title_null">发票抬头不能为空！</string>
    <string name="error_receiver_name">收货人姓名不能为空</string>
    <string name="error_receiver_phone">手机号码格式不正确</string>
    <string name="error_receiver_area">尚未选择所在地区</string>
    <string name="error_receiver_address">详细地址不能为空</string>
    <string name="error_receiver_postal_code">邮政编码不正确</string>

    <!--提示-->
    <string name="prompt_dialog_title">温馨提示</string>
    <string name="prompt_password_rule">密码由6&#8211;12位字母、数字或符号组成</string>
    <string name="prompt_security_password">我们将通过%1$s 给您发送验证码</string>

    <!--Use-->
    <!--~~~~~~商超模块~~~~~~-->
    <string name="forget_password">忘记密码</string>
    <string name="favorite_add">收藏该商品</string>
    <string name="favorite_delete">取消收藏</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="product_buy_quantity">购买数量</string>
    <string name="product_buy_notice">请选择商品规格</string>
    <string name="product_inventory">库存%1$d件</string>
    <string name="product_price_unit">￥</string>
    <string name="total_amount">总金额：￥</string>
    <string name="total_order_amount">订单金额：￥</string>
    <string name="tip_balance">账户余额：￥</string>
    <string name="tip_reward_point">赠送积分：</string>
    <string name="tip_coupon">优惠券：</string>
    <string name="tip_invoice">开具发票：</string>
    <string name="tip_rate">税率：</string>
    <string name="tip_tax">税金：</string>
    <string name="freight">运费</string>

    <!--*收货地址*-->
    <string name="default_receiver">【默认地址】</string>
    <string name="receiver_name">收货人：</string>
    <string name="receiver_phone">联系方式：</string>
    <string name="receiver_area">所在地区：</string>
    <string name="receiver_address">详细地址：</string>
    <string name="receiver_postal_code">邮政编码：</string>
    <string name="receiver_set_default">设为默认地址：</string>

    <!--订单状态-->
    <string name="order_state_all">全部</string>
    <string name="order_state_payment">待付款</string>
    <string name="order_state_shipment">待发货</string>
    <string name="order_state_receive">待收货</string>
    <string name="order_state_completed">已完成</string>

    <string name="action_settings">Settings</string>
    <string name="action_recovery">垃圾回收</string>
    <string name="action_housewifery">家政</string>
    <string name="action_supermarket">商超</string>
    <string name="action_dining">餐饮</string>
    <string name="title_activity_settings">设置</string>
    <string name="drag_to_delete_here">拖动到此处删除</string>
    <string name="loose_hand_can_be_deleted">松手即可删除</string>

    <string name="housekeeping_service">进入家政客服</string>

    <!--会员相关-->
    <string name="member_login">会员登录</string>
    <string name="immediate_registration">立即注册</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    action_recovery
</resources>
