<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account"
            android:inputType="text"
            android:maxLength="20"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/color_text_black"
            android:textColorHint="@color/color_hint_text"
            android:textSize="@dimen/t16" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_password"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/color_text_black"
            android:textColorHint="@color/color_hint_text"
            android:textSize="@dimen/t16" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_login"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/btn_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:text="@string/immediate_registration"
            android:textColor="@color/color_text_prompt" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/color_text_prompt"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>