<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/viewGroup"
        android:layout_marginTop="20dp"
        android:background="@drawable/line_top_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/all_padding"
        android:paddingRight="@dimen/all_padding">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-20dp"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/color_text_red"
            android:textSize="@dimen/t16"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrice"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_inventory"
            android:textColor="#cccccc"
            android:textSize="@dimen/t12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStock"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_buy_notice"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgGoods"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/viewGroup"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <com.geek.pet.common.widget.AdaptiveViewGroup
        android:id="@+id/viewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relayoutQuantity"
        android:background="@color/bg_color_white" />

    <RelativeLayout
        android:id="@+id/relayoutQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBuy"
        android:background="@drawable/line_top_bg">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/product_buy_quantity"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t16"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reduce"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_frame_bg"
                android:gravity="center"
                android:text="@string/btn_reduce"
                android:textColor="@color/color_text_label"
                android:textSize="@dimen/t16" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/line_top_bottom_bg"
                android:gravity="center"
                android:minWidth="40dp"
                android:maxWidth="80dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/color_text_label"
                android:textSize="@dimen/t14" />

            <TextView
                android:id="@+id/tv_plus"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_frame_bg"
                android:gravity="center"
                android:text="@string/btn_plus"
                android:textColor="@color/color_text_label"
                android:textSize="@dimen/t16" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_btn_buy"
        android:padding="10dp"
        android:text="@string/add_shopping_cart"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/t16" />

</RelativeLayout>